Fix not centered text

--- a/css/index.css
+++ b/css/index.css
@@ -37,15 +37,19 @@ body {
 
 .container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
+  margin-left: 3%;
+  margin-right: 3%;
 }
 
 a {
   text-decoration: none;
   margin: 20px;
   padding: 0;
+  width: max-content;
+  width: 45%;
 }
 
 article {
@@ -53,18 +57,21 @@ article {
   border-radius: 5px;
   background-color: rgb(20, 17, 17);
   height: 400px;
-  width: 600px;
+  margin: 5px;
   padding: 10px;
   color: rgb(231, 223, 191);
   text-align: center;
   font-size: 300%;
-  line-height: 370px;
+}
+
+p {
+  margin-top: 140px;
 }
 
 .vline {
   border-left: 2px solid #C09E73;
   height: 400px;
-  margin: 0px 50px 0px 50px;
+  margin: 0px auto 0px auto;
 }
 
 article:hover,
